# Norzkas-Custom-Gamma-Installer

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  NorzkasGammaInstaller.sln  README.md  main.cpp
Assets/Images/: Icon.psd  IconGenerate.ps1  Logo.psd
Assets/Theme/: THEME LINK.txt  vs15 Dark-Red.qss
CMake/: Version.hpp.in
CustomWidgets/: FlowLayout.hpp  InstallPathWidget.hpp  MultiThreadProgress.cpp  MultiThreadProgress.hpp
Headers/: AccountToken.hpp  File.hpp  Github.hpp  HTMLParsing.hpp  InstallManager.cpp  InstallManager.hpp  InstallOptions.hpp  ModDB.hpp  ModInfo.hpp  ModMakerParsing.hpp  ModOrganizer.hpp  ModProcessorThread.hpp  Validation.hpp  Version.hpp
Images/: GAMMAMainMenuLogo-NorzkaCustomInstaller.psd  Logo - Simplified.psd
InstallerWindow/: InstallerWindow.hpp  InstallerWindow.ui
LOGO/: GAMMAMainMenuLogo-NorzkaCustomInstaller.psd  GAMMAMainMenuLogo.dds  export settings.txt
NorzkasGammaInstaller/: NorzkasGammaInstaller.cpp  NorzkasGammaInstaller.vcxproj  NorzkasGammaInstaller.vcxproj.filters  app.manifest
NorzkasGammaInstaller/Headers/: AccountToken.hpp  Directories.h  Global.hpp  GlobalVariables.hpp  HTMLParsing.h  HTTPLogging.hpp  HTTPOperations.hpp  ModMakerParsing.hpp  String.h
Resource/: Version.rc
Source/: File.cpp  InstallManager.cpp  ModDB.cpp  ModInfo.cpp  ModInfoCallbacks.cpp  ModProcessorThread.cpp
